@@ -1,18 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST childlabor-0.0.3.gem 5120 RMD160 ea2626092f7fdc5c219ec548915c537c88e888e5 SHA1 9b260d36309fce7ad3f65a5850c6ef72b82a31bd SHA256 eae56c14b1e580074c52249263d94afe821faf9661e70277942bc09028041efe
 EBUILD childlabor-0.0.3.ebuild 665 RMD160 5616641e657a6cd356d148b87a4b3eb703cffbb0 SHA1 36fd0bebdf870a424acaca22b5f6c4869be2c579 SHA256 e277978a1140f3e15fddee79dcbb42fa615398b44dad8ce59221902708d88614
-MISC ChangeLog 404 RMD160 ac0910bba9929a72d78ae3268456b3c71791b16e SHA1 d15588a8895d5d1c1af3e8b9a927b12a2a5ac159 SHA256 3f944edde8f74be1bd915be1a9823bb31bbcbcd4401bdbfe57045ff5a67e0abb
-MISC metadata.xml 509 RMD160 1fa500f79ea2b453a881b425f53106b0a27bed8d SHA1 63638fdb485ff1da9bcaa3fb925d0da507eb7cdb SHA256 c72baa8f036ce1bdd074c83d7f903e7ae384075f5eb78aad21437c133c92e2dd
+MISC ChangeLog 512 RMD160 00ae0a867f771870ccd31ac012e0f40fb21b3712 SHA1 03f1b1432032126bb91370fbf439372395882800 SHA256 0af6340bc36540290405e1e2245e54fea0df0f4bc62287b888b0c2f465de9590
+MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQEcBAEBAgAGBQJP0QSDAAoJEBzRPIrUMBNCq64H/3uxs/+nC/Sk9J7SlLPOp1jf
-lE3v0mZfj8d82y2Um70E+IXICmbmdrki2jNAJqsNgigTEpztrR0xPJk+OaKaYkYJ
-qWXigt5A6eBFie8tuzlNHV6rPcRp4qxcQeDHIpYtnFs/IwPqLUTe7ULxBj+uFZBG
-Vgbv6g828saYODCOmO//RaytRjZyZHEIXUqJOpf53TeoudIHUSiViVUryA8T5FI+
-zKRE8zKHjQuwEgRQmNpDyK8AIw2JamkqB+UptDChheoMT6KP5z42fNXmiDs7xwrm
-OdkIUeVlryAMeKEobXWdht8WMAupWiyHSXQ7WuHYgLIoL65n5hQaNsfd6YQv6yk=
-=B2w7
+iF4EAREIAAYFAk/SFcIACgkQiIP6VqMIqNfW6wD+M70cLlVl0g84cDxzpHWjmQFP
+VfzncIJg/wsMT86acoYA+wVQ1oUE0OiRUvX4UxMj1CQh9zPN24srbIsIMM5eG7j0
+=ZVPj
 -----END PGP SIGNATURE-----
