@@ -2,11 +2,4 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>ruby</herd>
-	<longdescription>
-		Thor is a simple and efficient tool for building self-documenting
-		command line utilities. It removes the pain of parsing command line
-		options, writing "USAGE:" banners, and can also be used as an
-		alternative to the Rake build tool. The syntax is Rake-like, so it
-		should be familiar to most Rake users.
-	</longdescription>
 </pkgmetadata>
