@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/childlabor
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/childlabor/ChangeLog,v 1.1 2012/06/07 19:43:53 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/childlabor/ChangeLog,v 1.2 2012/06/08 15:09:43 graaff Exp $
+
+  08 Jun 2012; Hans de Graaff <graaff@gentoo.org> metadata.xml:
+  Drop long description from another package.
 
 *childlabor-0.0.3 (07 Jun 2012)
 
